# glance-multimodal-retrieval

./: .gitignore  Glance_Submission.md  Glance_Submission.tex  README.md  config.py  debug_modal.py  debug_pillow.py  pyproject.toml
evaluation/: __init__.py  evaluate.py
indexer/: __init__.py  build_index.py  caption_modal.py  download_dataset.py  embed_modal.py  finetune_modal.py  prepare_dataset.py  train_align_eval_modal.py
lora_adapters/: README.md  adapter_config.json
retriever/: __init__.py  retrieve.py  search.py
